# sensible-opencv

./: .gitignore  README.md  gradle.properties
OpenCV-3.3.1-android-sdk/sdk/native/jni/: OpenCVConfig.cmake
OpenCV-3.3.1-android-sdk/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/otselo/sensibleopencv/: ApplicationTest.java
app/src/androidTest/java/primalpond/com/sensibleopencv/: ApplicationTest.java
app/src/androidTest/java/primalpond/com/structurefrommotion/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: putText.cpp
app/src/main/cpp/include/: putText.h
app/src/main/java/eu/otselo/sensibleopencv/: MainActivity.java  PortraitCameraView.java
app/src/main/java/primalpond/com/sensibleopencv/: MainActivity.java  PortraitCameraView.java
app/src/main/java/primalpond/com/structurefrommotion/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk  eu_otselo_sensibleopencv_MainActivity.h  main.c  main.cpp  primalpond_com_sensibleopencv_MainActivity.h  primalpond_com_structurefrommotion_MainActivity.h  putText.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/eu/otselo/sensibleopencv/: ExampleUnitTest.java
app/src/test/java/primalpond/com/sensibleopencv/: ExampleUnitTest.java
app/src/test/java/primalpond/com/structurefrommotion/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
openCVLibrary331/: build.gradle
(+13 files in other folders)
